src/test/run-pass/polymorphic-iter.rs
iter iter2<@T>() -> T { }
fn main() {
    for each i: int in iter2() { }
}
